# backend/GastronomyApp.Contracts/Enums/PaymentMethod.cs
@@ -1,0 +1,8 @@
+namespace GastronomyApp.Contracts.Enums;
+
+public enum PaymentMethod
+{
+  None = 0,
+  Cash = 1,
+  Card = 2
+}
